--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-monaco-editor": "^0.52.0"
   },
   "devDependencies": {
     "@types/node": "^12.20.37",
