--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "views": {
+			"explorer": [
+				{
+					"type": "webview",
+					"id": "configPanel.configurePipeline",
+					"name": "Pipeline Configuration"
+				}
+			]
+		},
     "commands": [
       {
         "command": "codelens-sample.enableCodeLens",
