--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "main": "./out/extension.js",
   "contributes": {
     "views": {
-			"explorer": [
-				{
-					"type": "webview",
-					"id": "configPanel.configurePipeline",
-					"name": "Pipeline Configuration"
-				}
-			]
-		},
+      "explorer": [
+        {
+          "type": "webview",
+          "id": "configPanel.configurePipeline",
+          "name": "Pipeline Configuration"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "codelens-sample.enableCodeLens",
@@ -52,5 +52,8 @@
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vscode-test": "^1.5.0"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.194"
   }
 }
