--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.46.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -51,9 +52,10 @@
     "glob": "^7.1.6",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0"
+    "vscode-test": "^1.5.0",
+    "@types/lodash": "^4.14.194"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.194"
+    "lodash": "^4.14.194"
   }
 }
